--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "framer-motion": "^10.16.1",
     "next": "12.1.5",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "react-icons": "^4.10.1"
   },
   "devDependencies": {
     "@chakra-ui/storybook-addon": "^5.0.1",
