--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "@chakra-ui/react": "^2.8.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.3.1",
     "framer-motion": "^10.16.1",
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-icons": "^4.10.1"
+    "react-hook-form": "^7.46.0",
+    "react-icons": "^4.10.1",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
     "@chakra-ui/storybook-addon": "^5.0.1",
